src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionGraphView/ExecutionStageDetails/ExecutionStageDetails.module.scss
/*
 * Copyright 2021 Harness Inc. All rights reserved.
 * Use of this source code is governed by the PolyForm Shield 1.0.0 license
 * that can be found in the licenses directory at the root of this repository, also available at
 * https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.
 */

.main {
  position: relative;
  height: calc(var(--execution-children-height) - var(--execution-stage-details-height));
  width: 100%;
  overflow: hidden;

  background: linear-gradient(90deg, var(--white) 9px, transparent 1%) center,
    linear-gradient(#f6fcff 9px, transparent 1%) center, #bbc1c4;
  background-size: 10px 10px;
  &[data-layout='BOTTOM'] {
    height: 100%;
  }

  .stepDetails {
    position: absolute;
    top: 0;
  }

  .canvasBtns {
    top: var(--spacing-large);
    width: var(--spacing-xxlarge);
  }
  &.stepGroup {
    :global(.graphActions) {
      position: absolute;
      top: var(--spacing-large);
    }
  }
}
.popoverHeight {
  min-height: fit-content;
  margin-left: -20px;
}

.graphLink {
  stroke: var(--primary-6);
  &[data-link-executed='false'] {
    stroke: var(--grey-200);
  }
}

